src/app.css
.container {
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;
  justify-content: center;
  row-gap: 2rem;
  width: 100dvw;
  height: 100dvh;
  box-sizing: border-box;
  padding: 5rem;
}

.canvas-container {
  width: 60%;
  height: 100%;
  display: flex;
  flex-direction: column;
  row-gap: 2rem;
  align-items: center;
  align-content: center;
  justify-content: center;
}

canvas {
  width: 100%;
  height: 100%;
}

button {
  display: flex;
  align-items: center;
  column-gap: 0.5rem;
  font-family: var(--font);
  font-size: 0.75rem;
  color: var(--text-color-1);
  background: var(--button-color-1);
  border-radius: 0.5rem;
  padding: 0.625rem;
  border: 1px solid var(--border-color-1);
  filter: drop-shadow(0 0 0.75rem --background-color-1);
}

button:hover {
  background: var(--button-color-2);
  cursor: pointer;
}

button:active {
  background: var(--button-color-1);
  border-color: var(--border-color-2);
}

.menu-island {
  display: flex;
  flex-direction: row;
  background: var(--background-color-2);
  padding: 0.5rem;
  border-radius: 0.5rem;
}

.menu-separator {
  width: 100%;
  height: 1px;
  margin: 0.5rem 0;
  background-color: var(--border-color-1);
}

.menu-item-button {
  display: flex;
  align-items: center;
  column-gap: 1rem;
  background: var(--background-color-2);
  color: var(--text-color-1);
  font-size: 14px;
  border-radius: 0.5rem;
  padding: 0.5rem 1rem 0.5rem 1rem;
  width: fit-content;
  border: none;
}

.menu-item-button:active {
  background: var(--button-color-2);
}

